# vue-fastapi-nginx

./: docker-compose.yml
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/backend/: main.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue
